@@ -3,13 +3,13 @@ void initContextStack(void);
 void pushContext(CFPContext *context);
 CFPContext *popContext(void);
 void freeContext(CFPContext *context);
-int initPlugin(const char *iversion, f_plug_api gethooksptr);
-void *getPluginProperty(int *type, ...);
-int runPluginCommand(object *op, char *params);
-int postInitPlugin(void);
-void *globalEventListener(int *type, ...);
-void *eventListener(int *type, ...);
-int closePlugin(void);
+CF_PLUGIN int initPlugin(const char *iversion, f_plug_api gethooksptr);
+CF_PLUGIN void *getPluginProperty(int *type, ...);
+CF_PLUGIN int runPluginCommand(object *op, char *params);
+CF_PLUGIN int postInitPlugin(void);
+CF_PLUGIN void *globalEventListener(int *type, ...);
+CF_PLUGIN void *eventListener(int *type, ...);
+CF_PLUGIN int closePlugin(void);
 /* cfpython_archetype.c */
 PyObject *Crossfire_Archetype_wrap(archetype *what);
 /* cfpython_object.c */
